[project]
name="np2mcpl"
version="0.1.0"
authors = [
  { name="Erik B Knudsen", email="erik.knudsen@copenhagenatomics.com" },
]
description = "Package to convert a Monte Carlo particle in the form of a numpy-array to a MCPL-file."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies=[
    'numpy',
]

[project.urls]
"Homepage" = "https://github.com/ebknudsen/np2mcpl"
"Bug Tracker" = "https://github.com/ebknudsen/np2mcpl/issues"

[build-system]
requires = ["setuptools>=61.0", "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules=[]

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux_2_24"
before-all = [
  "apt-get -y install curl",
  "curl --output mcpl.tar.gz -L https://github.com/mctools/mcpl/tarball/master",
  "mkdir mcpl",
  "tar -xvf mcpl.tar.gz -C mcpl --strip-components=1",
  "cd mcpl",
  "cmake .","make","make install",
]
